<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Верхняя группа меню -->
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/nav_logout" />

    <!-- Пустое пространство для разделения -->
    <item
        android:id="@+id/nav_space"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent" />

    <!-- Нижняя группа для выбора языка и темы -->
    <group android:checkableBehavior="none">

        <!-- Выбор языка -->
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/baseline_language_24"
            android:title="@string/nav_language"
            android:layout_gravity="bottom" />

        <!-- Выбор темы -->
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/baseline_brightness_medium_24"
            android:title="@string/nav_theme"
            android:layout_gravity="bottom" />

    </group>
</menu>
